[package]
name = "shoopdaloop"
version = "0.2.0"
description = "Live looping application with DAW elements"
authors = [
    "Sander Vocke <sandervocke@gmail.com>"
]
edition = "2021"
license-file = "LICENSE"

[lib]

[dependencies]
pyo3 = "0.22"
glob = "0.3"
shoop_rs_frontend = { path = "src/rust/shoop_rs_frontend" }

[build-dependencies]
glob = "0.3"
cmake = "0.1"