[workspace]

resolver = "2"

members = ["src/rust/shoopdaloop",
           "src/rust/packaging"]

[patch.crates-io]
cxx-qt =  { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt" }
qt-build-utils = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "qt-build-utils" }
cxx-qt-build = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt-build" }
cxx-qt-gen = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt-gen" }
cxx-qt-lib = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt-lib" }
cxx-qt-lib-extras = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt-lib-extras" }
cxx-qt-macro = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg", package = "cxx-qt-macro" }

# cxx-qt =  { path = "C:/sdev/cxx-qt/crates/cxx-qt" }
# qt-build-utils = { path = "C:/sdev/cxx-qt/crates/qt-build-utils" }
# cxx-qt-build = { path = "C:/sdev/cxx-qt/crates/cxx-qt-build" }
# cxx-qt-gen = { path = "C:/sdev/cxx-qt/crates/cxx-qt-gen" }
# cxx-qt-lib = { path = "C:/sdev/cxx-qt/crates/cxx-qt-lib" }
# cxx-qt-lib-extras = { path = "C:/sdev/cxx-qt/crates/cxx-qt-lib-extras" }
# cxx-qt-macro = { path = "C:/sdev/cxx-qt/crates/cxx-qt-macro" }
