[workspace]

resolver = "2"

members = ["src/rust/*"]

[workspace.dependencies]
cmake = "0.1"
anyhow = "1.0"
glob = "0.3"
bindgen = "0.70"
static_assertions = "1.1"
log = "0.4"
colored = "2.1"
humantime = "2.1"
fern = { version = "0.6", features = ["colored"] }
lazy_static = "1.5"
ctor = "0.2"
toml = "0.8"
regex = "1.10"
copy_dir = "0.1"
serde = "1.0"
pyo3 = { version = "0.25", features = ["auto-initialize"] }
minidumper = "0.8"
crash-handler = "0.6"
uuid = { version = "1.17", features = ["v4"] }
tempfile = "3.20"
serde_json = "1.0"
once_cell = "1.21"
cxx = "1.0"
tar = "0.4"
dunce = "1.0"
#cxx-qt = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt" }
#cxx-qt-lib = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-lib" }
#cxx-qt-build = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-build" }
cxx-qt = "0.7.2"
cxx-qt-lib = { version = "0.7.2", features = ["full"] }
cxx-qt-build = "0.7.2"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
walkdir = "2.5"
indexmap = "2.5"
clap = { version = "4.5", features = ["derive"] }
serde-xml-rs = "0.8"

# [patch.crates-io]
# cxx-qt =  { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt" }
# qt-build-utils = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "qt-build-utils" }
# cxx-qt-build = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-build" }
# cxx-qt-gen = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-gen" }
# cxx-qt-lib = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-lib" }
# cxx-qt-lib-extras = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-lib-extras" }
# cxx-qt-macro = { git = "https://github.com/SanderVocke/cxx-qt.git", branch = "win_dbg_v072", package = "cxx-qt-macro" }

# cxx-qt =  { path = "C:/sdev/cxx-qt/crates/cxx-qt" }
# qt-build-utils = { path = "C:/sdev/cxx-qt/crates/qt-build-utils" }
# cxx-qt-build = { path = "C:/sdev/cxx-qt/crates/cxx-qt-build" }
# cxx-qt-gen = { path = "C:/sdev/cxx-qt/crates/cxx-qt-gen" }
# cxx-qt-lib = { path = "C:/sdev/cxx-qt/crates/cxx-qt-lib" }
# cxx-qt-lib-extras = { path = "C:/sdev/cxx-qt/crates/cxx-qt-lib-extras" }
# cxx-qt-macro = { path = "C:/sdev/cxx-qt/crates/cxx-qt-macro" }

[profile.release-with-debug]
inherits = "release"
debug = true