[project]
name = "shoopdaloop"
version = "0.1.0"
description = "Live looping application with DAW elements."
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
maintainers = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
requires-python = ">=3.9"

dependencies = [
  "soundfile==0.12.1",
  "mido==1.3.2",
  "jsonschema==4.22.0",
  "numpy==1.26.4",
  "pyjacklib==0.1.1",
  "pyside6-essentials==6.7.1",
  "lupa==2.2",
  "appdirs==1.4.4",
  "sounddevice==0.4.7",
  "pywin32 ; platform_system == \"Windows\"",
]

keywords = ['music', 'midi', 'jack', 'looping']

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
  "Operating System :: POSIX :: Linux",
]

[project.gui-scripts]
shoopdaloop = "shoopdaloop.__main__:main"

[project.urls]
Homepage = "https://github.com/SanderVocke/shoopdaloop"
# Documentation = "https://shoopdaloop.readthedocs.io/"
"Bug Tracker" = "https://github.com/SanderVocke/shoopdaloop/issues"
Discussions = "https://github.com/SanderVocke/shoopdaloop/discussions"

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "sphinx",
  "sphinx-material",
  "sphinxcontrib-fulltoc",
  "sphinxcontrib-plantuml"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["*"]
exclude = ['codegen', 'dist', 'third_party']

[build-system]
requires = [
  "py-build-cmake@git+https://github.com/tttapa/py-build-cmake@2fba7c5404cc0cf2a68914b780ae52b404aafd32",
  "ctypesgen@git+https://github.com/SanderVocke/ctypesgen@9b88a970cb85823de83423add2a4b21ea79b63d9",
  "meson",
  "toml"
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
directory = "src"

[tool.py-build-cmake.cmake]
minimum_version = "3.22"
build_type = "RelWithDebInfo"
source_path = "src"
build_args = ["-j4"]
args = ["--log-level=verbose"]
install_components = ["package_install"]
build_path = "build"
python_abi = "abi3"
abi3_minimum_cpython_version = 39
generator = "Ninja"

[tool.py-build-cmake.editable]
mode = "wrapper"
